src/objects/Update_Project_Estado_batch__c.object
<CustomObject>
    <fields>
        <fullName>Descripci_n_Error__c</fullName>
        <label>Descripción Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FechaAccion__c</fullName>
        <label>Fecha Accion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>estado__c</fullName>
        <label>estado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hayError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hayError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>idProyecto__c</fullName>
        <label>idProyecto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Update Project Estado batch</label>
    <nameField>
        <label>Nombre de Update Project Estado batch</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Update Project Estado batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>